reddit-clone-k8s-ingress-master/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reddit-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  # Jenkins will replace this with: branch.my-ip.nip.io
  - host: HOST_PLACEHOLDER
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reddit-clone-service
            port:
              number: 3000
